# deepstrike

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json
crates/deepstrike-core/: Cargo.toml
crates/deepstrike-core/benches/: kernel_baseline.rs
crates/deepstrike-core/src/: lexical.rs  lib.rs
crates/deepstrike-core/src/benchmark/: mod.rs
crates/deepstrike-core/src/context/: compression.rs  config.rs  dashboard.rs  fault.rs  llm_summarizer.rs  manager.rs  mod.rs  partitions.rs  policy.rs  pressure.rs  renderer.rs  renewal.rs  sections.rs  skill_catalog.rs  snapshot.rs  summarizer.rs  task_state.rs  text.rs  token_engine.rs  units.rs  utility.rs
crates/deepstrike-core/src/governance/: audit.rs  constraint.rs  mod.rs  permission.rs  pipeline.rs  quota.rs  rate_limit.rs  repeat_fuse.rs  sandbox.rs  tool_decision.rs  veto.rs
crates/deepstrike-core/src/harness/: eval.rs  eval_pipeline.rs  mod.rs
crates/deepstrike-core/src/memory/: curator.rs  durable.rs  extractor.rs  idle_pipeline.rs  mod.rs  runtime.rs  semantic.rs  session.rs  synthesis.rs  trace_analyzer.rs  working.rs
crates/deepstrike-core/src/mm/: handle.rs  memory.rs  mod.rs  value.rs
crates/deepstrike-core/src/orchestration/: executor.rs  gen_eval.rs  loop_until_done.rs  mod.rs  planner.rs  task_graph.rs  tournament.rs  workflow.rs
crates/deepstrike-core/src/proc/: mod.rs
crates/deepstrike-core/src/runtime/: event_log.rs  kernel.rs  mod.rs  repair.rs  replay.rs  session.rs  snapshot.rs
crates/deepstrike-core/src/scheduler/: entropy.rs  milestone.rs  mod.rs  policy.rs  rollback.rs  state_machine.rs  state_machine_tests.rs  tcb.rs  workflow_run.rs
crates/deepstrike-core/src/signals/: attention.rs  mod.rs  (+2 more)
crates/deepstrike-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/deepstrike-node/src/: lib.rs
crates/deepstrike-py/: Cargo.toml
crates/deepstrike-py/src/: lib.rs
example/python/: .env.example  .markdownlint.json  README.md  pyproject.toml
example/python/meetingmind/: paths.py  provider.py  store.py  types.py
example/python/quantstrike/: README.md
python/: README.md  pyproject.toml
python/deepstrike/: __init__.py  agent.py  governance.py  workflow.py
python/deepstrike/collaboration/: __init__.py  contract.py  handoff.py  harness.py  modes.py  pool.py
python/deepstrike/harness/: __init__.py  harness.py  judge.py
python/deepstrike/kernel/: __init__.py
python/deepstrike/knowledge/: __init__.py  source.py
python/deepstrike/memory/: __init__.py  agent.py  extraction.py  in_memory_store.py  protocols.py  ranking.py  retention.py  working.py
python/deepstrike/providers/: __init__.py  anthropic.py  anthropic_compatible.py  base.py  deepseek.py  factories.py  gemini.py  glm.py  kimi.py  minimax.py  ollama.py  openai.py  openai_responses.py  qwen.py  replay.py  replay_validator.py  stream.py  vendor_profiles.py
python/deepstrike/runtime/: __init__.py  archive.py  context_policy.py  credential_vault.py  eval.py  event_stream.py  execution_plane.py  facade.py  filtered_plane.py  kernel_event_log.py  kernel_rebuild.py  kernel_step.py  kernel_transaction_log.py  large_result_spool.py  loop_driver.py  mcp_proxy_plane.py  os_profile.py  os_snapshot.py  output_schema.py  process_sandbox_plane.py  provider_replay.py  reaction_checkpoint.py  reactive_session.py  reducers.py  reliability.py  remote_vpc_plane.py  replay_fixture.py  replay_provider.py  replay_sanitize.py  run_group.py  runner.py  session_log.py  session_repair.py  sub_agent_orchestrator.py  turn_policy.py  workflow_control_flow.py  workflow_store.py  worktree_plane.py
python/deepstrike/safety/: __init__.py  permissions.py
python/deepstrike/signals/: __init__.py  gateway.py  scheduled.py  types.py
python/deepstrike/skills/: __init__.py  loader.py  registry.py  watcher.py
python/deepstrike/tools/: __init__.py  errors.py  execution.py  registry.py
python/deepstrike/types/: __init__.py  agent.py
python/examples/hello_agent/: main.py
python/tests/: test_agent_run_state.py  test_anthropic_cache_ttl.py  test_anthropic_compat_golden.py  test_attachment_seeding.py  test_bootstrap_workflow.py  test_cancellation_transaction.py  test_context_policy.py  test_creator_verifier_attempt_loop.py  test_deepseek_stream_transport.py  test_entropy_watch.py  test_gemini_features.py  test_gen_eval_template.py  test_glm_web_search.py  test_golden_fixtures.py  test_harness_judge.py  test_in_memory_dream_store.py  test_inject_note.py  test_kernel_snapshot_v2.py  test_kernel_transaction_log.py  test_kernel_wire_state.py  test_kimi_context_cache.py  test_knowledge_budget.py  test_knowledge_keyed_entries.py  test_knowledge_skill_pin.py  test_loop_driver.py  test_memory_recall_lifecycle.py  test_memory_syscall.py  test_milestones.py  test_minimax_split.py  test_minimax_stream_transport.py  test_multimodal.py  test_multimodal_e2e.py  test_nested_group_vehicle.py  test_openai_responses_builtin_tools.py  test_openai_responses_provider.py  test_os_native_profile.py  test_os_snapshot_golden.py  test_pair_orphan_tool_calls.py  test_pre_query_memory.py  test_process_cancellation.py  (+42 more)
rust/: Cargo.toml  README.md
rust/src/: agent.rs  governance.rs  harness.rs  harness_loop.rs  knowledge.rs  lib.rs  memory.rs  run_event.rs  safety.rs  signals.rs  tests.rs  tools.rs
rust/src/providers/: anthropic.rs  mod.rs  openai.rs
rust/src/runtime/: archive.rs  credential_vault.rs  eval.rs  execution_plane.rs  large_result_spool.rs  mcp_proxy_plane.rs  mod.rs  os_profile.rs  process_sandbox_plane.rs  provider_replay.rs  remote_vpc_plane.rs  replay.rs  replay_fixture.rs  replay_provider.rs  runner.rs  sandboxed_skill.rs  session_log.rs  skill_watcher.rs
tests/rust/: Cargo.toml
tests/rust/src/: main.rs  t01_types.rs  t02_state_machine.rs  t03_context.rs  t04_governance.rs  t05_memory.rs  t06_signals.rs  t07_harness.rs  t08_sdk.rs  t09_api.rs  t10_sdk_paths.rs  t11_runtime.rs  t12_golden_fixtures.rs  t13_transaction.rs  t14_milestone.rs  t15_sub_agent.rs
(+714 files in other folders)
