[workspace]
resolver = "2"
members = [
    "crates/deepstrike-core",
    "crates/deepstrike-py",
    "crates/deepstrike-node",
    "crates/deepstrike-wasm",
    "rust",
    "tests/rust",
]

[workspace.package]
version = "0.2.27"
edition = "2024"
license = "MIT"
repository = "https://github.com/kongusen/deepstrike"

[workspace.dependencies]
deepstrike-core = { path = "crates/deepstrike-core", version = "0.2.27" }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
compact_str = { version = "0.8", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
bytes = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
