[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "deepstrike"
version = "0.2.46"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "google-genai>=1.0",
    "dashscope>=1.20",
]

[tool.maturin]
manifest-path = "../crates/deepstrike-py/Cargo.toml"
module-name = "deepstrike._kernel"
python-source = "."
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
