[package]
name = "deepstrike-sdk"
description = "DeepStrike Rust SDK — agent framework built on deepstrike-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
deepstrike-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
