[package]
name = "deepstrike-core"
description = "Cross-language agent runtime kernel — pure computation, zero I/O"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
compact_str = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"

[[bench]]
name = "kernel_baseline"
harness = false
