[package]
name = "deepstrike-node"
description = "Node.js bindings for DeepStrike runtime kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi6 is required for BigInt support (we use it for u64 token counts and timestamps)
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
deepstrike-core = { workspace = true }
deepstrike-tokenizer = { workspace = true }
compact_str = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
