[project]
name = "meetingmind-demo"
version = "0.1.0"
description = "MeetingMind — AI Meeting Intelligence demo built on deepstrike"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "deepstrike>=0.1.3",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
]

[project.scripts]
meetingmind = "main:cli_entry"
meetingmind-server = "server:web_entry"
